Implementação do detalhamento de remessas

--- a/View/View.EntregasDia.fmx
+++ b/View/View.EntregasDia.fmx
@@ -10,6 +10,7 @@ object view_EntregasDia: Tview_EntregasDia
   FormFactor.Height = 480
   FormFactor.Devices = [Desktop]
   OnClose = FormClose
+  OnShow = FormShow
   DesignerMasterStyle = 0
   object layoutPadrao: TLayout
     Align = Contents
@@ -22,7 +23,7 @@ object view_EntregasDia: Tview_EntregasDia
       Margins.Top = 10.000000000000000000
       Position.Y = 43.000000000000000000
       Size.Width = 360.000000000000000000
-      Size.Height = 86.000000000000000000
+      Size.Height = 110.000000000000000000
       Size.PlatformDefault = False
       TabOrder = 0
       object imageSearch: TImage
@@ -35,55 +36,55 @@ object view_EntregasDia: Tview_EntregasDia
             PNG = {
               89504E470D0A1A0A0000000D49484452000000300000003008060000005702F9
               87000000017352474200AECE1CE90000000467414D410000B18F0BFC61050000
-              0608494441546843ED586B4C5447143E77EEBE1F2020C86311A448958820185F
-              8D411B4D53B5D4D6A6496B6A9BDA9AF411F547DB68D297898DE0A36934D1DADA
-              36C6B6DA16C5B4D5DA1AB529180425154914A80F5410581EB22E2CECDEC774CE
-              DDBD84B450EEB26835D92F399973CECCEC3DDFCCB967E62E84114618618411C6
-              830C2ED08E1606FE1E0DB47715A112C0F964FA81CB933DA6C87C51E6264884B7
-              1059EED3117A3DC2D75356F16CCA7936466672570885424097F5DDF545DD86A8
-              F53DCEF699426C1C470321AA91F2ECD72D9C546D137B8B6A0B171743559510E8
-              1A358C8400F7F0CB4536E989553B5CADB757887171FDBFF14F026ACB399D3422
-              3EBA644CC591576A0A97773197DA15328225C0A52FFFC02E2C5B73D00DC60518
-              0746426F3551D1446F4257672DF83C5D9437D9695474061F412680CE41FC5301
-              AC20941BCEED5F7CA3F0F55123112C0143CA0FCE3D6EDEFA821ABCDC76ABAEEF
-              C4DE226FC9E64A10040F73494C7836D4A45FB26AAA71D1ABEBB8D8B41CCAF91F
-              6507EFA1E6F7E73E07172FFA14478808860049FBB266A9CB672DA62C6D3078B1
-              B1EE947B63C15A70363533B3075D4CF085C5DFD531B180C1166BD978EC239296
-              FDB4E276B6D248A3B0A269E5A4FDAC1FC9DE339812BEEFA88C3AD44D5122F734
-              5C82F8F199CC6F67C2567CD0C540BF158CC674CBCE4B67ACC5DD14257A7FDB05
-              E6372B2342447F7E0E0392BCF1C8146FA76BBA62B5B450B1E2E00668B9D1C82C
-              5C795CC9C1721AFD1EF07A5BA4E3BBDE03779B88A3BC3A735642E1A93CD6A7F5
-              F943423381BED8D479983A8A15616BE8F9FADD52A661CE63CAFC179058AFB764
-              7B35C8A41A0DC51195389735F78C004F797D2A964914A9D75503BDBDDDCCAF35
-              8791A487F6F59CF39B6C22E127B006532C246825C051C25B033A109976B0060F
-              255C4C2DC0712247C5F67E83100B6B8229228342F3164AA2D78BAD12B1C98C2F
-              AED6E05550CE60B6AB93485F1FEE60C8D04A8082C7DDA43E9C1AAD53006287AA
-              3C438110AB7D5A4007F94E6B1D6B825D847F412B01D95777A682B2174079A2CE
-              9591BCF5DB1CA6692540E2DFD99B2AC9BA1968D0D61E9F7864F709A6867C0E68
-              25207976AD390F776E5F428372E3882F39AF08F2F24C4AEFB048D78BB98F6F92
-              4D26A3B200A4AB54283B802578B80A362CB4A710AB22427DF9A75496954AE4E1
-              0D7392D71FDB0129F94862A89D60FE3CBDE3C01F1F7A78CB934AF0CDCD54AA3E
-              FE19D3FA98844C20981CD681D93CCEBCA5FC2B5D7CFA420C06274712F1644CFB
-              B5D5D5ABA6D532130352BB48D6CED2948ED8CCAD2E303EA5E60A6DBE7CD4BB3A
-              672553B122E1D52324044300C79A216D7A9AF5ED7DFBB8D8647C0794680D9C4B
-              3073964A3DD0723D481D02F0637C94CCF0009DED93F52665E5114CB1F676FE66
-              E3A5DF8D2D359FD7BF5580E5B8BF7B240886000253CE0AA93969E6D57BB610C7
-              C48540FC6791FA2D80181891A2B3B4936FD69602AF97B9A489F9E8B2515F45E4
-              C5530557372C6B53878D04C19E84F82011BA5ABAC55FF79EE4C6263572B69854
-              305A625891EC1FA0824A2208ED8D5768D5D16DC2E667B6EAE62C1D0B31C98FE0
-              181FC73B84B894B989E9D93F75951DC42BC98810EC0EA8C0680D4CF0401B4396
-              BC99AB9F3C6706D8E3922483C144049F9776DFBE25D5979F934B3E3ECBC6B898
-              7820FBB1F1E4B51DDFE8A213B355A21610CE44FFF9CBD26B9B9E773233E89D18
-              290104CE45227A2658898C011DFDFE9D62174F26586DF0E3057D56C89A9F41DE
-              D8FD05CF48A0079D36F0554457FE5C7075DB8AA0D329D4CBD4C0407B99E0D51A
-              AF0828A8A34FBD33A148E06C70D3860BA72173FE4CCE628F673EC68E7748090F
-              E53B32320E7796FD88733423E4DBE0006080584655196C25FD849DD7DDF446D5
-              6998F2E82CCE12310E9DEC9D48921232E639D28323319A04B42240E2A69B5E39
-              5B065317CC4612D8C17622498ACBC877E4E61EEE3C59AC8984D69378B481E75A
-              0FD456FC256F7FF125DAD154E37703B85BDBF35A0D898B98FA7FC51614300322
-              60D2AC5CB2B3EE02FF49BDC8AD639FAA0063037D0F04FC2432F373C8DA7D6B98
-              9EC8042B9A268452464713982E588AF1AF182CBBC17CEDDD37C0C5BC5F16348C
-              30C208238C0702007F033F0E4A7A02B148EE0000000049454E44AE426082}
+              0609494441546843ED586B4C5447143E77EEBE970501511EBB828854890882F1
+              D518B4D134554B6D6D9AB4A6B6A9AD491F517FB48D267D99D8083EFA4313ADAD
+              B631B6D5B628A6ADD6D6A84DC12028A948A3607DF0140441706161F73EA673EE
+              EE25A485722F8B5693FD9293397366E6DEF3CD9C3933F742082184104208213C
+              CCE002E548A1FFF368A0BCA70896008E27D30F5E9DECB144E48832375E22BC8D
+              C872AF81D0DA705F7771E9738917581F99C93D21140C0143FAB7B58BBA4C91EB
+              BBEB1B670A4E1747032EAA9EF2ECE9364EAA08137BF2ABF216174079B910681A
+              310C8700F7C82BF961D293AB7674D635AF105DAEBE67FC93805A72F5F5343C31
+              AE7054E9D1572BF396773093DA1434F412E052967FE81096AD39E406F302F403
+              3DA137AE5331C2540F1DED55E0F37450DEE2A09151A97CB8301E0C13887F2880
+              1D8412D3F9038BEBF2DE1831127A099812BF6FD9E3E6ED2FAACECBAD37AB7B4F
+              EECBF7166E2E0341F03093C484675D2DC625ABA69A17BDB68E8B49CEA49CFF55
+              0EF01E6EFA60EEF370E9924F3104093D0448F217954B3BDD8602CAC2069D171B
+              AA4FBB37E6AE8596C62656ED461313DCB0F85C03131B98C2626C1B8F7F4C9233
+              9E51CCF57534229CAC685C39E9006B47B2F70D96B8EFDACA220F775194883D35
+              9721765C1AB33B98B0191F7032D06E07B339C5B6F3F2597B411745893AD07A91
+              D9AD4A8F20D1179F4380B8361E9DE26D6A99AED46A6BA9587A680334D735B01A
+              CE3CCEE440318D760F78BDCDD2895DEF83BB55C45E5E83353D2EEF74366BD3FA
+              FE41A199406F4CD23C0C1DA516135DD3FDD57B454CC398C790F92F20B11E6FE1
+              F60A90490556144364FC5C56DC37023CE58D49982651A49ECE4AE8E9E96276AD
+              318C243DB4B7FBBCBFCA06127E3C2B30C4828256021C25BC3DA00391691B2BF0
+              50C2C9D402EC277254BCDD5721C4C60A3D496440685E4249F47AB1543CB65871
+              E36A755E05E54C56873A88F4F6E20A060DAD042878DC8DEACBA9D93E856D84C1
+              32CF6020C4EE9816D041BE7BAB9A157A27E15FD04A40F6559F2DA56C03286F34
+              B4A4BAB67E93C934AD0448ECBBFB9224D930032BF456B74F3CBAFB2453833E07
+              B412903CBBD65C80BB772E638572E388CF959D0FD9D916A57548A418C5AC2736
+              C9168B599900D25124141FC4143C54061B12DA43886511E14AC9A75496954CE4
+              E14D735CEB8FEF80C41C2431D84A307BB6D179F0F78F3CBCED29C5F99A1A2A55
+              9CF88C69BD4C8226A027860D60B58EB56E29F9D2109BB2109DC1C111443C157D
+              FBC6EA8A55D3AA58151D529B48FACEA2C4B698B4AD9D607E5A8D15DA74F59877
+              75E64AA66246C2AB4750D04300FB5A21797AB2FD9DFDFBB91817EE01C55B13D7
+              2958395B9911688911A43601F8513E4A667880CEF6C9468B32F308A6D87BDA7F
+              0DE3A5DFCCCD959F5F793B17D3715FF370A087000243CE0E4999C9D6D57BB610
+              E7C48540FC6791FA2D80E8EF91A2B3B093EBAB8A8037CA5CC2C41C3485515F69
+              C4A5D3B9D7372C6B55BB0D077A4F427C91081DCD5DE22FFB4E71A3131AB8B0E8
+              2430DBA25992ECEBA0824A2208B71BAED1F263DB84CDCF6E35CC593A1AA25D8F
+              621F1FC73B85318973E353327EEC283E8457926141EF0AA8406F4D4CF0401B45
+              96BC95659C3C670638C62448269385083E2FEDBA7353BA52725E2EFCE41CEBD3
+              C9C403198F8F23AFEFF8DA10159FA112B5817036EA8F9F97DED8F4420BABEA5E
+              89E11240E0582462648299C81CD0D1EE5F2976F16482D9063F5ED06687F4F9A9
+              E4CDDD7B7946022D680C035F6954D94FB9D7B7ADD01D4EC15EA6FA3BDAC304AF
+              D6784540411D6DEA9D094582961A37ADB97806D2E6CFE46C8E586663EC78A714
+              3721C7999A7AA4BDF8071CA31941DF06FB011DC434AACA4033E927DC52EBA675
+              E56760CA63B3385BF85834B23D9120C5A5CE73A6E823319204B42240A2DE4DAF
+              9D2B86A90B6623096C602B91208D49CD7166651D693F55A08984D69378A481E7
+              5A375495FE256F7FE965DAD658E93703B8EB6E66DF32C52F62EAFFE59B2E6004
+              84C3A459596467F5453EFF4F915BC73E55014607DA1E0AF849A4E56492B5FBD7
+              303D9E0966344D08268D8E24305C3015E3AF184CBB7ABEF61E18E0643E28131A
+              4208218410C2430180BF01D0D24952D10A32CB0000000049454E44AE426082}
             FileName = 
               'C:\Users\TI\Desktop\Workspace\Projetos\Delphi\DeliveryControl\im' +
               'ages\search\res\mipmap-mdpi\ic_launcher.png'
@@ -97,7 +98,7 @@ object view_EntregasDia: Tview_EntregasDia
         Position.X = 311.000000000000000000
         Position.Y = 8.000000000000000000
         Size.Width = 41.000000000000000000
-        Size.Height = 70.000000000000000000
+        Size.Height = 94.000000000000000000
         Size.PlatformDefault = False
         OnMouseUp = imageSearchMouseUp
       end
@@ -107,24 +108,24 @@ object view_EntregasDia: Tview_EntregasDia
         Margins.Top = 15.000000000000000000
         Margins.Bottom = 15.000000000000000000
         Position.X = 9.000000000000000000
-        Position.Y = 7.000000000000000000
+        Position.Y = 31.000000000000000000
         Size.Width = 288.000000000000000000
-        Size.Height = 26.000000000000000000
+        Size.Height = 28.000000000000000000
         Size.PlatformDefault = False
         TextSettings.Font.Size = 14.000000000000000000
         TextSettings.Font.StyleExt = {00060000000100000004000000}
         TextSettings.FontColor = claDarkcyan
         Text = 'Informe o per'#237'odo'
-        TabOrder = 0
+        TabOrder = 1
       end
       object dateEditInicial: TDateEdit
         Date = 44277.000000000000000000
         Position.X = 8.000000000000000000
-        Position.Y = 56.000000000000000000
-        Size.Width = 89.000000000000000000
-        Size.Height = 22.000000000000000000
+        Position.Y = 80.000000000000000000
+        Size.Width = 113.000000000000000000
+        Size.Height = 24.000000000000000000
         Size.PlatformDefault = False
-        TabOrder = 3
+        TabOrder = 4
       end
       object labelInicial: TLabel
         StyledSettings = [Family, Size, Style]
@@ -132,33 +133,53 @@ object view_EntregasDia: Tview_EntregasDia
         Margins.Top = 15.000000000000000000
         Margins.Bottom = 15.000000000000000000
         Position.X = 9.000000000000000000
-        Position.Y = 31.000000000000000000
-        Size.Width = 88.000000000000000000
-        Size.Height = 28.000000000000000000
+        Position.Y = 55.000000000000000000
+        Size.Width = 112.000000000000000000
+        Size.Height = 30.000000000000000000
         Size.PlatformDefault = False
         TextSettings.FontColor = claDarkcyan
         Text = 'Data inicial:'
-        TabOrder = 2
+        TabOrder = 3
       end
       object dateEditFinal: TDateEdit
         Date = 44277.000000000000000000
-        Position.X = 112.000000000000000000
-        Position.Y = 56.000000000000000000
-        TabOrder = 4
+        Position.X = 136.000000000000000000
+        Position.Y = 80.000000000000000000
+        Size.Width = 100.000000000000000000
+        Size.Height = 24.000000000000000000
+        Size.PlatformDefault = False
+        TabOrder = 5
       end
       object Label1: TLabel
         StyledSettings = [Family, Size, Style]
         Margins.Left = 8.000000000000000000
         Margins.Top = 15.000000000000000000
         Margins.Bottom = 15.000000000000000000
-        Position.X = 113.000000000000000000
-        Position.Y = 31.000000000000000000
-        Size.Width = 88.000000000000000000
-        Size.Height = 28.000000000000000000
+        Position.X = 137.000000000000000000
+        Position.Y = 55.000000000000000000
+        Size.Width = 104.000000000000000000
+        Size.Height = 30.000000000000000000
         Size.PlatformDefault = False
         TextSettings.FontColor = claDarkcyan
         Text = 'Data final:'
-        TabOrder = 1
+        TabOrder = 2
+      end
+      object Label2: TLabel
+        StyledSettings = [Family]
+        Margins.Left = 8.000000000000000000
+        Margins.Top = 15.000000000000000000
+        Margins.Bottom = 15.000000000000000000
+        Position.X = 9.000000000000000000
+        Position.Y = 7.000000000000000000
+        Size.Width = 344.000000000000000000
+        Size.Height = 28.000000000000000000
+        Size.PlatformDefault = False
+        TextSettings.Font.Size = 14.000000000000000000
+        TextSettings.Font.StyleExt = {00060000000100000004000000}
+        TextSettings.FontColor = claDarkcyan
+        TextSettings.HorzAlign = Center
+        Text = 'Entregas por Dia'
+        TabOrder = 0
       end
     end
     object stringGridExtrato: TStringGrid
@@ -171,7 +192,7 @@ object view_EntregasDia: Tview_EntregasDia
       Margins.Right = 20.000000000000000000
       Margins.Bottom = 20.000000000000000000
       Size.Width = 320.000000000000000000
-      Size.Height = 373.000000000000000000
+      Size.Height = 349.000000000000000000
       Size.PlatformDefault = False
       StyleLookup = 'gridstyle'
       TextSettings.HorzAlign = Trailing
@@ -180,8 +201,9 @@ object view_EntregasDia: Tview_EntregasDia
       RowHeight = 50.000000000000000000
       RowCount = 0
       Options = [ColLines, RowLines, RowSelect, Tabs, Header, AutoDisplacement]
+      OnCellDblClick = stringGridExtratoCellDblClick
       Viewport.Width = 316.000000000000000000
-      Viewport.Height = 348.000000000000000000
+      Viewport.Height = 324.000000000000000000
       object stringColumnCliente: TStringColumn
         Header = 'Cliente'
         Size.Width = 73.000000000000000000
@@ -199,6 +221,9 @@ object view_EntregasDia: Tview_EntregasDia
         Header = 'Qtde.'
         Size.Width = 63.000000000000000000
       end
+      object integerColumnCodCliente: TIntegerColumn
+        Visible = False
+      end
     end
     object layoutFooter: TLayout
       Align = Bottom
@@ -207,6 +232,33 @@ object view_EntregasDia: Tview_EntregasDia
       Size.Height = 49.000000000000000000
       Size.PlatformDefault = False
       TabOrder = 2
+      object rectangleDetalhe: TRectangle
+        Align = Client
+        Cursor = crHandPoint
+        Fill.Color = xFF03A9F4
+        Size.Width = 360.000000000000000000
+        Size.Height = 49.000000000000000000
+        Size.PlatformDefault = False
+        Stroke.Color = xFF03A9F4
+        XRadius = 4.000000000000000000
+        YRadius = 4.000000000000000000
+        OnMouseDown = rectangleDetalheMouseDown
+        OnMouseUp = rectangleDetalheMouseUp
+        object labelDetalhe: TLabel
+          Align = Client
+          StyledSettings = [Family]
+          Locked = True
+          Size.Width = 360.000000000000000000
+          Size.Height = 49.000000000000000000
+          Size.PlatformDefault = False
+          TextSettings.Font.Size = 16.000000000000000000
+          TextSettings.Font.StyleExt = {00060000000000000004000000}
+          TextSettings.FontColor = claWhite
+          TextSettings.HorzAlign = Center
+          Text = 'Detalhar'
+          TabOrder = 0
+        end
+      end
     end
     object layoutTitle: TLayout
       Align = Top
@@ -233,25 +285,25 @@ object view_EntregasDia: Tview_EntregasDia
                 87000000017352474200AECE1CE90000000467414D410000B18F0BFC61050000
                 028A494441546843ED96CFAB125114C79DB17C92BE4742D4261444B4220C9E81
                 2D5AD99F506DFC330417AEC48588B872D33268D3CE20E83D0ADEE68DC15B0A2E
-                14FC813BD194307F8DA668E7DC1944A767CC6B661E77EA7EE080F79EC39CEFB9
-                F7DC7BB530180C0683C1F847E1BADDEE935EAF17C2DFD29479E0AAD56A68369B
-                7D1345F17BABD57A8673928B7E88F8F97CDE5DCB6011822004D12785D00BD768
-                34507C47D64E68369B67E170F81EFAA5303AC1957FBABDF248AD563BF7FBFD0F
-                C07F0B6348248510F1D8F3B26E02882F7A3C9E87E077620C89A4904B57BE5EAF
-                0B6612BFD3F320FEDCE7F33D02BFF9561EDB664B3C4F2229645FCF7F75BBDDE6
-                107FD9CA6F89A7BA6D7EBBE751BCD7EB7D0CFE23302BC66934D55C25982B97CB
-                A140207062B3D9EECA73964EA7B35A2C16270E876360B7DB7F5AADD6B5ECFA2B
-                789E5F4F26930B97CBF50E862B69563B5CA5523956F6BC51F4FBFDF790F3404A
-                FD67D41E34BE542A1D2E974B551FD50AE4C13654A54D6D0BE1C78E52A9D48B58
-                2CF6D6E97462AF13B085DAEDF619249DC110DBE74A3DAC84E3B8D5783C2E4622
-                913730C46FEAC60DB03BC964F2D570381CC8BB4D80228460308887D803E6D668
-                F7C15C60984F774811B013AF47A3D14E1170F0BE44A3514C7C538ED36286BE21
-                988014015BFD43D64F80EBF5733C1E3F04BFA636BA0EB68BD8D90928E2349FCF
-                6FCE08CD6C8A50B6D3743AFD94CD667127A867EF4E601170E0F16F05F5EC3D13
-                662D42B9131F4D5784F29D1045F1432E9773486174438AC0C70E0EF6A69DE08D
-                18140A8563F0517FBD223B45404B0D3399CC4B98C3AB55F7028C5A112CE2763A
-                9D7E0E7F8FB944225184F1006C894E3D31724BB1083B18E610C174177F1DA078
-                231789C1603018FF3516CB2FA5FB8A127B8609E10000000049454E44AE426082}
+                14FC81B8D3D4307F8D8668E7DC1944A767CC6B661E77EA7EE08073CFE19E73EE
+                FDDE7BB530180C0683C1F847E1BADDEE935EAF17C2DFD29079E0AAD56A683E9F
+                7F1345F17BABD57A8663928B7E48F18BC5A2BB96C126044108A24F0AA117AED1
+                6860F11DB97642B3D93C0B87C3F7D02F85D109AEFCD3ED95476AB5DAB9DFEF7F
+                00FE5B1843222984148F9A97EB2640F1458FC7F310FC4E8C21911472E9CAD7EB
+                75C14CC5EF681E8A3FF7F97C8FC06FBE9547D96C15CF93480AD9A7F9AF6EB7DB
+                1CC55FB6F25BC5532D9BDFEE792CDEEBF53E06FF119815E3349A6AAE12CC95CB
+                E550201038B1D96C77E5314BBBDD5EF13C7FE270388676BBFDA7D56A5DCBAEBF
+                02E65A4FA7D30B97CBF50E3E57D2A876B84AA572ACD4BC51F4FBFDF790F3404A
+                FD67D41E34BE542A1D2E974B55936A05F2A00C55D5A6564238D9512A957A118B
+                C5DE3A9D4ED43A012534180CCE20E91C3E513E57D2B0128EE35693C9A4188944
+                DEC027CEA91B37C0EE2493C957A3D16828EF36A1D3E908C160100FB107CCADD1
+                EE83B9C0309FEE902660275E8FC7E39D26E0E07D8946A398F8A61CA7C50C7D43
+                30016902B6FA875C3F01AED7CFF178FC10FC9A64741D6C37B1B313D0C4693E9F
+                DF9C119AD934A194D36C36FB94CD667127A867EF4E601370E0F16F05F5EC3D13
+                666D42B9131F4DD784F29D1045F1432E9773486174439AC0C70E0EF6464EF046
+                0C0B85C231F8A8BF5E919D264052A34C26F312C6F06AD5BD01A356049BB89D4E
+                A79FC3DF632E914814E17B08B644A79E18B9A5D8841D0C738860BA177F1D60F1
+                462E1283C16030FE6B2C965FA5ED8712F190AF460000000049454E44AE426082}
               FileName = 
                 'C:\Users\TI\Desktop\Workspace\Projetos\Delphi\DeliveryControl\im' +
                 'ages\arrow_exit\res\mipmap-mdpi\ic_launcher.png'
@@ -287,6 +339,11 @@ object view_EntregasDia: Tview_EntregasDia
       Category = 'Extratos'
       Text = 'actionProcessar'
       OnExecute = actionProcessarExecute
+    end
+    object actionDetalhar: TAction
+      Category = 'Extratos'
+      Text = 'Detalhar'
+      OnExecute = actionDetalharExecute
     end
   end
 end
