--- a/View/View.Extratos.fmx
+++ b/View/View.Extratos.fmx
@@ -23,7 +23,7 @@ object view_Extratos: Tview_Extratos
       Margins.Top = 10.000000000000000000
       Position.Y = 43.000000000000000000
       Size.Width = 360.000000000000000000
-      Size.Height = 86.000000000000000000
+      Size.Height = 142.000000000000000000
       Size.PlatformDefault = False
       TabOrder = 0
       object labelAno: TLabel
@@ -32,13 +32,13 @@ object view_Extratos: Tview_Extratos
         Margins.Top = 15.000000000000000000
         Margins.Bottom = 15.000000000000000000
         Position.X = 105.000000000000000000
-        Position.Y = 31.000000000000000000
+        Position.Y = 55.000000000000000000
         Size.Width = 48.000000000000000000
         Size.Height = 28.000000000000000000
         Size.PlatformDefault = False
         TextSettings.FontColor = claDarkcyan
         Text = 'Ano:'
-        TabOrder = 4
+        TabOrder = 5
       end
       object labelMes: TLabel
         StyledSettings = [Family, Size, Style]
@@ -46,22 +46,22 @@ object view_Extratos: Tview_Extratos
         Margins.Top = 15.000000000000000000
         Margins.Bottom = 15.000000000000000000
         Position.X = 167.000000000000000000
-        Position.Y = 31.000000000000000000
+        Position.Y = 55.000000000000000000
         Size.Width = 74.000000000000000000
         Size.Height = 28.000000000000000000
         Size.PlatformDefault = False
         TextSettings.FontColor = claDarkcyan
         Text = 'M'#234's:'
-        TabOrder = 7
+        TabOrder = 8
       end
       object comboBoxAno: TComboBox
         Position.X = 104.000000000000000000
-        Position.Y = 56.000000000000000000
+        Position.Y = 80.000000000000000000
         Size.Width = 57.000000000000000000
         Size.Height = 24.000000000000000000
         Size.PlatformDefault = False
         StyleLookup = 'comboboxstyle'
-        TabOrder = 6
+        TabOrder = 7
       end
       object comboBoxMes: TComboBox
         Items.Strings = (
@@ -80,12 +80,12 @@ object view_Extratos: Tview_Extratos
           'DEZ')
         ItemIndex = 0
         Position.X = 168.000000000000000000
-        Position.Y = 56.000000000000000000
+        Position.Y = 80.000000000000000000
         Size.Width = 73.000000000000000000
         Size.Height = 24.000000000000000000
         Size.PlatformDefault = False
         StyleLookup = 'comboboxstyle'
-        TabOrder = 8
+        TabOrder = 9
       end
       object imageSearch: TImage
         MultiResBitmap.Height = 48
@@ -97,55 +97,55 @@ object view_Extratos: Tview_Extratos
             PNG = {
               89504E470D0A1A0A0000000D49484452000000300000003008060000005702F9
               87000000017352474200AECE1CE90000000467414D410000B18F0BFC61050000
-              0605494441546843ED987B4C14471CC76767EFFD00791CF23804295E95882018
-              1F34066D354DD5525B9B26ADA97FD4D6A48FA87FB48D267D99D8083E9AB4265A
-              5B5B636CAB6D514C5BADAD511BC12008A94822607DA082C01DE0C1C11DB7AFE9
-              FCF66E0969A1EC716835B94FF2CBCCFC66E6F6F79D9DFDEDECA1081122448810
-              E161860996E3C5D0DF23C1F29E12AE00988F671DBA3ACD6B882E142466B28859
-              1396A4010D2637A3B8FE8AAA17D22ED23112B57B22281C019AECEF6F2EE9D3C5
-              6CEC7775CDE1E36D0C0986A844CAD25F3731629D45F09534162F2D45B5B57CB0
-              6BDC188B00E6D1574A2CE2D36B76F638DDAB049B6DF037FE29402919978B444D
-              8C299B5075ECD5FAE2956EEA52BAC22654014CE6CA0FADFC8A75873D48BF08E2
-              804848DB1D22E8A5DBC8DDDD8838AF9BB0062B898975B051EC64A449C181A908
-              99115FA9AB39B8F456F11BE326225401BAB41F9D7B3DACF9652578C975A769E0
-              D4FE127FD9D66AC4F35EEA12A9B174A841BB6CCD0CFD92D73630B68C5CC2042E
-              6545FE236D1FCC7F115DBECCC98E30094500CEF8BA7E790F6F292574DB40F042
-              4BD319CFE6A2F5C8D9DA469BFDE0A2060F2CFCAE869A09E92C36D3E6131FE38C
-              9CE764B7CB49A275DCAAD6D5530FD27E107BDF3024FDD0551D73A48F8045EF6D
-              6E408993B2A8DF4A8DAEF8B08B017E33D2EB334DBB1ACE9B4BFB0858EC41D725
-              EA37CA23C264707F8E024EDD7C6CBAFF6EEF2CB9D5D14184AAC39B50FBAD16DA
-              829587951C6E4F83DF8BFCFE76F1E4EEF791C725C028BFC6989D547C269FF6A9
-              BDFE88A81630604B5F005B476E59CDCDFDDFBC574E6BB0E761CBFC1720CCE72F
-              FBAC0E49B80E1AB22326793E2DEE9B0096B0DA74489360A2AFA71EF97C7DD4AF
-              760F83482F19E8AF0934E9444C3354608B85855A010CC1AC39584758225DB480
-              97122CA61A609CC010A173B081B18916A1249161517D0B45C1EF87528ED86084
-              07576DF00A84D119ADCA243C300077306CD40A20C8EB69552E4EF4E6E908D946
-              CA3C2381B1D93A335847526F47132D425D847FA15680C4359DAF22F40190AFA8
-              E975A46EFF2E97D6D40AC089EFEE4F1725CD6C68908E7E4E38B6E714AD86FD1E
-              502B40F4EE5E7711F5DE6D8006611230979A5F82F2F30D72EFA8646A85BCA7B6
-              4806835E5E00EC2EE72B0E410A1E2D838D8AFA2D44B3087FA5F27322497226F2
-              B2BA82D48D2776A2B4421031D29DA0FE7CADFDD0D98FBCACE91939F8F67622D6
-              9DFC82D606A8852D20943DAC4146E344E3B6CA7D9AC4CCC5100C4C8EC6C2E9B8
-              CE1B6BEBD6CC6CA44D0848E9C2D9BBCAD3BA6C59DB7B90FE5965AF90B6ABC7FD
-              6B7357D32A6424387A8445280260AC1165CCCA30BF73E000634B8567408E56C7
-              F4F046C654AD45A4528BC42E1EB1133882677B1199C7495A83BCF200AD987DDD
-              BF5B58F10F7D7BFD9757DE2E82743CD83D16421100C09633A3F4DC0CE3DABDDB
-              B07DCA628403EF22E55B00181A915CA7DB4EBADD588E58ADC4A44C2904978570
-              55D197CF145DDFB4C2A50C1B0BA1BE09E1420272B7F709BFED3FCDC4A7B43096
-              B874A437C5D124393840818802E23B5BAE91DAE33BF8ADCF6FD7142C8F4771A9
-              8FC1188E61ED7C42DAFCE4CC9C9FDD1587E148322642BD030A10AD8E1ABCD026
-              E0656FE569A715CC46D6841451A733609EF393BEBB77C42B953552D92717E898
-              1E6A5E94F3E424FCFACE6F35B1C9398A5013E2CFC7FEF9EBF21B5B5E72D266C8
-              7762AC0200980B42B4D42013E98375F007EE143D7852836C031F2FE033A3EC85
-              0EFCE69EAF582A023CE0B420AE2AB6FA97A2EB3B5685BC9DC23D4C0D0DD4470D
-              8ED6704400833AF894331398889CCD1ED27CE91CCA5A3887315913A98FAA63ED
-              62D223857687E36877C54F304735619F06870001421A556CB8950C0876DEF490
-              5BB5E7D0F4C7E732A6A889E0A4CF448A98E45860CF0C4DC4780A504B50C46D0F
-              B976A102CD58340F444007BD13296282A3D09E9777B4FB74A92A11FF87002020
-              A2B3958AA839CBCC78A2605044873391434C0377725F7D70DC030D2C60149A3A
-              370FEF6ABAC47EFA97C06CA09FAA08C507FB1E0A0222B20A73F1FA03EB683D99
-              1A643455849346C71348C7908AE1AF1848BBA17CED3D30C0623E280B1A214284
-              08111E0A10FA1BC0A54DB01CE4E33D0000000049454E44AE426082}
+              0605494441546843ED586B6C5445143E77EEBEB7DB77A14F5A6AA9D0505A5AC2
+              CB90828118012B8A3151221A51121F017EA881C417098696D70F484014350415
+              D442890AA20430B6A4B4D04869022DF228F4B56CDF6CBBDDDDFB18E7ECEE6D1A
+              6DEDBDDD8290EC979CCC396766F69E6FE6DC33731742082184104208E1610617
+              68C70A837F8F06DA7B8A6009E07C32E3D0B5292E53448128731325C25B882CBB
+              7584DE0AF7F695573E9F7A918D9199DC1342C110D0657F776B71AF216A439FDD
+              314B181FCFD140884AA43CFB750B27D58489FDC575454B4AA0BA5A08748D1946
+              43807BF4D5E230E9A9D5BB7A5A3B568AF1F103BFF14F024ACBD9ED343C31B634
+              B2F2D86BB5452BBA994BE90A1A5A0970192B3EB209CBD71E76827121C68191D0
+              A6462A5AB846E8EEAC03AFAB9BF2261B8D8ACEE4C36122E82610FF54002B0815
+              860B0797DC2E7A73CC4868256048FDC1B1CFC95B5F528297DB5AEADDA7F6177B
+              4AB7548120B8984B62C2B3A126FDD2D5D38C8B5F5FCFC5A5E752CEFF281B788E
+              B47E38EF05B87CD9EB7304092D0448FA97B5CB7ADCE612CAD20683179BEACF38
+              3715AE0347732B33FBD0C5045F58FC5D1D130B18C2E22C9B4E7C42D2739EF5B9
+              EDAD34C22CAD6C5E35F920EB47B2F70DA684EF3BAAA28EF45294887D0D57207E
+              4216F3DB98B0151F7231D06F05A331C3B2FBCA396B492F45893ED87689F9CDBE
+              114162203F470049D9746CAAA7BD6B86CF6A69A162E5E18D60BFDDC42C5C795C
+              C9A1721AFD2EF078ECD2C93D1F80B34DC4511E9D393BA1E84C3EEB53FBFC61A1
+              9A803B2E6D3EA68ECF8A0C6FE8FBFAFD32A661CE63CAFC179058BFA774670DC8
+              A4060D9F232A711E6BEE1B019EF2FA342C9328527F4F2DF4F7F732BFDA1C4692
+              2EEAEEBBE037D944C24F640DA65850504B80A384B706742032ED600D1E4AB898
+              6A80E3448E8AED03062116D66829224342F5164AA2C783AD2F6293195F5CB5C1
+              2BA09CC16C532611B71B773068A82540C1E56C561E4E8DD6A90071C3559EE140
+              88D5363DA0837CF74E3D6BB42EC2BFA09680ECAD3F5749D90BE07BA2AE2B3365
+              DBB7B94C534B80C4BFB73F4D927533D1A077FABCE2B1BDA7981AF439A09680E4
+              DAB3F622DCEDBA8206E512883725BF18F2F34DBEDE1191A117F39EDC2C9B4C46
+              DF0290EE32A1FC1096E0912AD888509F42AC8A08572B3EA5B2ECAB442EDE3037
+              65C3895D905A802486DB09E6CFD7271FFAE363176F79DA177C7333956A4E7EC6
+              343793A00968C9611D98CDE3CD5B2BBED2C5672CC260707204114FC7B4DF5C53
+              B37A7A1D333120A58B64EF2E4BED88CBDAD603C667945CA1ADD78E7BD6E4AE62
+              2A5624BC7A04052D0470AC19D267A45BDF3D70808B4BC177C017AD81EB11CC9C
+              A54A0FB4420F5287007CA49792992EA073BCB2DEE45B790453ACFD9DBF85F1D2
+              EF467BEDE757DF29C4723CD03D1A682180C094B3425A6EBA79CDBEAD2479D222
+              20FEB348F916400C8EC8A7B3B4931BEBCA80D7CB5CD2A4027485516F65C4E533
+              8537362E6F53868D065A4F427C9008DDF65EF1D7FDA7B9D8A4262E2C260D8C96
+              185624070628A09208427BD3755A7D7CBBB0E5B96DBAB9CB622126E5311CE3E5
+              F864615CEABCC48C9C9FBACB0FE3956454D0BA030A305A03133CD022C9D2B7F3
+              F453E6CE04DBB824C9603011C1EBA1BD5D2DD2D58A0B72E98EF36C4C0F1317E4
+              3C3181BCB1EB1B5D74628E42D402C2B9E83F7F597673F38B0E666ADE89D11240
+              E05C24A2678295C818D0D1EFDF2976F16482D5063F5ED06785EC0599E4ADBD5F
+              F08C047AD01906DECAE8AA9F0B6F6C5FA9399D82BD4C0D0EB49F095EADF18A80
+              823AFA943B138A048E06276DB87416B216CCE22CB678E663ECF86429E19182E4
+              CCCCA39DE53FE21CD508FA3638081820965145865A493F61C72D27BD5D7D16A6
+              3E3E9BB3848F47277B2792A484CCF9C919DA488C2501B508906874D2EBE7CB61
+              DAC23948023BD84E2449E3320B92F3F28E769E2E514542ED493CD6C073AD0FEA
+              2AFF9277BEFC0AED68AEF5BB019CAD8EFC3B86C4C54CFDBF62D304CC8070983C
+              3B8FECAEBFC4EFA813B9F5EC53152036D0F750C04F22AB2097AC3BB096E9894C
+              B0A2A9423065742C81E982A518FF8AC1B2ABE56BEF81012EE683B2A021841042
+              08213C1400F81B9315496E861E5AD40000000049454E44AE426082}
             FileName = 
               'C:\Users\TI\Desktop\Workspace\Projetos\Delphi\DeliveryControl\im' +
               'ages\search\res\mipmap-mdpi\ic_launcher.png'
@@ -159,7 +159,7 @@ object view_Extratos: Tview_Extratos
         Position.X = 311.000000000000000000
         Position.Y = 8.000000000000000000
         Size.Width = 41.000000000000000000
-        Size.Height = 70.000000000000000000
+        Size.Height = 126.000000000000000000
         Size.PlatformDefault = False
         OnMouseUp = imageSearchMouseUp
       end
@@ -170,11 +170,11 @@ object view_Extratos: Tview_Extratos
           'Fechado')
         ItemIndex = 0
         Position.X = 8.000000000000000000
-        Position.Y = 56.000000000000000000
+        Position.Y = 80.000000000000000000
         Size.Width = 89.000000000000000000
         Size.Height = 24.000000000000000000
         Size.PlatformDefault = False
-        TabOrder = 2
+        TabOrder = 3
       end
       object labelTipo: TLabel
         StyledSettings = [Family, Size, Style]
@@ -182,13 +182,13 @@ object view_Extratos: Tview_Extratos
         Margins.Top = 15.000000000000000000
         Margins.Bottom = 15.000000000000000000
         Position.X = 9.000000000000000000
-        Position.Y = 31.000000000000000000
+        Position.Y = 55.000000000000000000
         Size.Width = 88.000000000000000000
         Size.Height = 28.000000000000000000
         Size.PlatformDefault = False
         TextSettings.FontColor = claDarkcyan
         Text = 'Extrato:'
-        TabOrder = 1
+        TabOrder = 2
       end
       object labelDia: TLabel
         StyledSettings = [Family, Size, Style]
@@ -196,13 +196,13 @@ object view_Extratos: Tview_Extratos
         Margins.Top = 15.000000000000000000
         Margins.Bottom = 15.000000000000000000
         Position.X = 249.000000000000000000
-        Position.Y = 31.000000000000000000
+        Position.Y = 55.000000000000000000
         Size.Width = 48.000000000000000000
         Size.Height = 28.000000000000000000
         Size.PlatformDefault = False
         TextSettings.FontColor = claDarkcyan
         Text = 'Dia:'
-        TabOrder = 3
+        TabOrder = 4
       end
       object comboBoxDia: TComboBox
         Items.Strings = (
@@ -213,12 +213,12 @@ object view_Extratos: Tview_Extratos
           '31')
         ItemIndex = 0
         Position.X = 248.000000000000000000
-        Position.Y = 56.000000000000000000
+        Position.Y = 80.000000000000000000
         Size.Width = 57.000000000000000000
         Size.Height = 24.000000000000000000
         Size.PlatformDefault = False
         StyleLookup = 'comboboxstyle'
-        TabOrder = 5
+        TabOrder = 6
       end
       object labelTitulo: TLabel
         StyledSettings = [Family]
@@ -226,7 +226,7 @@ object view_Extratos: Tview_Extratos
         Margins.Top = 15.000000000000000000
         Margins.Bottom = 15.000000000000000000
         Position.X = 9.000000000000000000
-        Position.Y = 7.000000000000000000
+        Position.Y = 31.000000000000000000
         Size.Width = 288.000000000000000000
         Size.Height = 26.000000000000000000
         Size.PlatformDefault = False
@@ -234,6 +234,23 @@ object view_Extratos: Tview_Extratos
         TextSettings.Font.StyleExt = {00060000000100000004000000}
         TextSettings.FontColor = claDarkcyan
         Text = 'Informe a data de pagamento'
+        TabOrder = 1
+      end
+      object Label2: TLabel
+        StyledSettings = [Family]
+        Margins.Left = 8.000000000000000000
+        Margins.Top = 15.000000000000000000
+        Margins.Bottom = 15.000000000000000000
+        Position.X = 9.000000000000000000
+        Position.Y = 7.000000000000000000
+        Size.Width = 344.000000000000000000
+        Size.Height = 28.000000000000000000
+        Size.PlatformDefault = False
+        TextSettings.Font.Size = 14.000000000000000000
+        TextSettings.Font.StyleExt = {00060000000100000004000000}
+        TextSettings.FontColor = claDarkcyan
+        TextSettings.HorzAlign = Center
+        Text = 'Extrato Quinzenal'
         TabOrder = 0
       end
     end
@@ -247,7 +264,7 @@ object view_Extratos: Tview_Extratos
       Margins.Right = 20.000000000000000000
       Margins.Bottom = 20.000000000000000000
       Size.Width = 320.000000000000000000
-      Size.Height = 373.000000000000000000
+      Size.Height = 317.000000000000000000
       Size.PlatformDefault = False
       StyleLookup = 'gridstyle'
       TextSettings.HorzAlign = Trailing
@@ -257,7 +274,7 @@ object view_Extratos: Tview_Extratos
       RowCount = 0
       Options = [ColumnResize, ColumnMove, ColLines, RowLines, RowSelect, Tabs, Header, HeaderClick, AutoDisplacement]
       Viewport.Width = 316.000000000000000000
-      Viewport.Height = 348.000000000000000000
+      Viewport.Height = 292.000000000000000000
       object stringColumnQtde: TStringColumn
         Header = 'Qtde.'
         Size.Width = 41.000000000000000000
@@ -341,28 +358,28 @@ object view_Extratos: Tview_Extratos
               PNG = {
                 89504E470D0A1A0A0000000D49484452000000300000003008060000005702F9
                 87000000017352474200AECE1CE90000000467414D410000B18F0BFC61050000
-                028C494441546843ED96BF8B1A4114C7DD353112BD2342B83487828826211838
-                03A6B8CAFC099734FE19828595588888954DCA409A740602B990C035B706520A
-                160AFEC04AD028C1F86B5544F3DEEC22BA39C35E76F7984DE6030F76E73DF6BD
-                37F39D99B530180C0683C1F847E1BADDEED35EAF17C26769C83C70D56A35349B
-                CDBE8BA2F8A3D56A3DC731C9453FA4F8F97CDE5DCB6013822004D12785D00BD7
-                6834B0F88E5C3BA1D96C5E84C3E107E897C2E80467FED9F6CC23B55AEDD2EFF7
-                3F04FF5D8C219114428A47CDCB7513A0F8A2C7E379047E27C690480AB972E6EB
-                F5BA60A6E277340FC55FFA7CBEC7E037DFCCA36CB68AE7492485ECD3FC57B7DB
-                6D8EE2AF9AF9ADE2A996CD6FE73C16EFF57A9F80FF10CC8A711A4D35D709E6CA
-                E5722810089CDB6CB62379CC02FF3BABC56271EE70380676BB7D61B55AD7B2EB
-                AFE0797E3D994CBEB95CAEB7F0BA9246B5C3552A9513A5E68DA2DFEFBF839C77
-                A4D47F46ED46E34BA5D2C172B954F551AD401E94A1AADAD44A083F76984AA55E
-                C462B1374EA713B54E4009B5DBED0B483A835794CFB534AC84E3B8D5783C2E46
-                2291D7F08ADFD48D5B60F793C9E4CBE1703890579BD0E974846030889BD803E6
-                D668C7602E30CCA73BA409588957A3D168A709D8785FA2D12826BE2DC7693143
-                EF104C409A80A5FE29D74F80E3F5733C1E3F00BF2619DD04DB4DECAC0434F129
-                9FCF6FF608CD6C9A50CA693A9D7ECC66B3B812D4B37725B009D8F0F85B413D7B
-                F784599B50AEC407D335A1BC2744517C9FCBE51C5218DD9026F0B2838DBD9113
-                DC118342A170023EEA8F5764A70990D43093C99CC1181EADBA3760D48C6013F7
-                D2E9F429FC1E738944A208EF03B0253AF5C4C825C526EC60984304D3BDF89B00
-                8B377292180C0683F15F63B1FC02A6138A12619B321D0000000049454E44AE42
-                6082}
+                028B494441546843ED96CFAB125114C79DB17C92BE4742D4261444B4220C9E81
+                2D5AD99F506DFC330417AEC48588B872D33268D3CE20E83D0ADEE68DC15B0A2E
+                14FC813BD194307F8D863F3AE7CE203A3D635E33F3B853F70307BCF71CE67CCF
+                BDE7DEAB85C16030180CC63F0AD7ED769FF47ABD10FE96A6CC0357AD5643B3D9
+                EC9B288ADF5BADD6339C935CF443C4CFE7F3EE5A068B100421883E29845EB846
+                A381E23BB27642B3D93C0B87C3F7D02F85D109AEFCD3ED95476AB5DAB9DFEF7F
+                00FE5B184322298488C79E977513407CD1E3F13C04BF13634824855CBAF2F57A
+                5D3093F89D9E07F1E73E9FEF11F8CDB7F2D8365BE279124921FB7AFEABDBED36
+                87F8CB567E4B3CD56DF3DB3D8FE2BD5EEF63F01F8159314EA3A9E62AC15CB95C
+                0E050281139BCD76579EB3B4DBEDD572B93C71381C03BBDDFED36AB5AE65D75F
+                C1F3FC7A32995CB85CAE77305C49B3DAE12A95CAB1B2E78DA2DFEFBF879C0752
+                EA3FA3F6A0F1A552E970B158A8FAA856200FB6A12A6D6A5B083F76944AA55EC4
+                62B1B74EA7137B9D802DD4E974CE20E90C86D83E57EA61251CC7ADC6E3713112
+                89BC81217E53376E80DD492693AF86C3E140DE6D0214200483413CC41E30B746
+                BB0FE602C37CBA438A809D783D1A8D768A8083F7251A8D62E29B729C1633F40D
+                C104A408D8EA1FB27E025CAF9FE3F1F821F835B5D175B05DC4CE4E4011A7F97C
+                7E734668665384B29DA6D3E9A76C368B3B413D7B77028B80038F7F2BA867EF99
+                306B11CA9DF868BA2294EF84288A1F72B99C430AA31B52043E7670B037ED046F
+                C4A050281C838FFAEB15D929025A6A98C9645EC21C5EADBA1760D48A6011B7D3
+                E9F473F87BCC251289228C07600B74EA89915B8A45D8C1308708A6BBF8EB00C5
+                1BB9480C0683C1F8AFB1587E01A5CB8A124055E2D40000000049454E44AE4260
+                82}
               FileName = 
                 'C:\Users\TI\Desktop\Workspace\Projetos\Delphi\DeliveryControl\im' +
                 'ages\arrow_exit\res\mipmap-mdpi\ic_launcher.png'
@@ -395,8 +412,8 @@ object view_Extratos: Tview_Extratos
       Margins.Left = 8.000000000000000000
       Margins.Top = 15.000000000000000000
       Margins.Bottom = 15.000000000000000000
-      Position.X = 17.000000000000000000
-      Position.Y = 129.000000000000000000
+      Position.X = 9.000000000000000000
+      Position.Y = 153.000000000000000000
       Size.Width = 320.000000000000000000
       Size.Height = 28.000000000000000000
       Size.PlatformDefault = False
