--- a/View/View.Main.fmx
+++ b/View/View.Main.fmx
@@ -81,6 +81,35 @@ object view_Main: Tview_Main
           TabOrder = 0
         end
       end
+      object rectangleEntregasDia: TRectangle
+        Align = Top
+        Cursor = crHandPoint
+        Fill.Color = xFF03A9F4
+        Margins.Top = 20.000000000000000000
+        Position.Y = 90.000000000000000000
+        Size.Width = 247.000000000000000000
+        Size.Height = 50.000000000000000000
+        Size.PlatformDefault = False
+        Stroke.Color = xFF03A9F4
+        XRadius = 4.000000000000000000
+        YRadius = 4.000000000000000000
+        OnMouseDown = rectangleEntregasDiaMouseDown
+        OnMouseUp = rectangleEntregasDiaMouseUp
+        object labelAcampanhamento: TLabel
+          Align = Client
+          StyledSettings = [Family]
+          Locked = True
+          Size.Width = 247.000000000000000000
+          Size.Height = 50.000000000000000000
+          Size.PlatformDefault = False
+          TextSettings.Font.Size = 16.000000000000000000
+          TextSettings.Font.StyleExt = {00060000000000000004000000}
+          TextSettings.FontColor = claWhite
+          TextSettings.HorzAlign = Center
+          Text = 'Entregas Dia'
+          TabOrder = 0
+        end
+      end
     end
     object layoutTitle: TLayout
       Align = Top
@@ -119,41 +148,41 @@ object view_Main: Tview_Main
               PNG = {
                 89504E470D0A1A0A0000000D49484452000000300000003008060000005702F9
                 87000000017352474200AECE1CE90000000467414D410000B18F0BFC61050000
-                0443494441546843ED985D48235714C733498C4D57DBFAD5AC6EF765B7062A68
-                B150B1D487225B7CF1A50F95DD1A83B40A7D6D415CB6A554DFDA375BFAA42024
-                540B523F40A9E2B24F5A28A2D22256515862FD765504A34D6292FEFF999BC5EE
-                3AC94C325328CC0F0E73EF9D3BF79C73E7DC73EF8CC5C4C4C4C4C4E4FF8C24AE
-                5AC9F4B974C4C555355A0C914646465E6E6868F8C46EB7BF81BA556ED68D5824
-                12F97D6262A2BFA9A92988BA66675221F5F6F61642C11F7183818E5F7B7A7A5E
-                127A75C3B6B7B7775FE8309CDDDDDDCFA953569D1AB52194BBBFBFDF575252E2
-                61656D6D6D76797979C16AB5C61277B324168B592B2A2ADE2A2F2F7F97F5C3C3
-                437F7171713B8A21D6F5C0B9BDBD3D2826283E3737F72DDA6E424A21D7B3148E
-                7193638AE1E3D4853627242D192DC4BCBCBCBF717902D9871C64291CE3891853
-                33193980D0618660F8441524B6B0B050787A7AFA3ECAEC7B559FCB1213636A26
-                9B54A8A4501A1F1F775555554D391C8E312CC8BB6853B5203341EF5C4E6C3535
-                353FD86CB6EA9C9C1C47515151FFCECECE876C976FEB8B5A0762333333BF4C4E
-                4E7E3F3535F5DDECECEC6F68537A03D6EEEEEE6F0E0E0E02AC60D3A3133E239D
-                500315737371415E85E441949C67FB2BCDCDCDEF1D1D1DFD25124B3C1C0E8710
-                4EF770EF2A2772575757BB44574D59480B348CCA292C2BED216CB7430A3D1E4F
-                3D72FA96B02BE104DEC4556B226307D46E641242A2D1E974BE29EA6981B1B693
-                9313278E066E6C501F88660BEA1138E52D2D2D1D42951988D081076EB7FB2B56
-                E0E44F6565651FA378CEBA1E38A0D42726286BE043329C926198F11B508AE367
-                B186422186852EE0ED484B4B4B2FA278D57AD084EAB3D0D0D0D0DDFCFCFCB731
-                41AA9E8946A3EC272103BD565B5BDB28B75A2C67676717C3C3C31D2D2D2D3FA2
-                7A046118191E429C2966A1E4D9259D94416E747676D69D9F9F6FCA81118F0783
-                C1B0CFE7FB0CF7388E0392E43FCF42E9C43E3D3DED46AC3F1636258CF7FBFD3C
-                263F6B3C31DC0109C7E946BCFE0794CDCDCD77D826DF7A0E099BDE6D18BF26EC
-                89E319A5994F62B803FFCA421B1B1B5FA24D6951E7C0D99F45D7546173998C1D
-                509B856C97B390282B3D2BB5B7B77F8D34F927663E323A3A7ADFEBF5D2202ED8
-                70A2878EA875803C0D197C41A5CA441763636381D6D656CFE0E0E0A738520CA0
-                CD10E3891607D4C2EF84200E7D2B6D6D6DDC6D0F2186184FB2712091E7E5E273
-                D009E670FE1EB960430A1263A479AB8AA87D88DFC47D38BF7CC4CAF1F1F1435C
-                1EE183257996C90A9E9B70A92F2828B8C33A36B2016C646D28EAB691BDB0B8B8
-                F8344B18CDFCFCFC17D429ABD6077B5D5D9D1B33B322741846201058ACACACBC
-                459DB2EAD4A80D21F6BB565D5D7DABABABCBEB72B95EC747B8AE0900B647B7B6
-                B6563A3A3AFCEBEBEBFC9A3B6373E2660AB42C1C1ACCCDE51A241792D1A24B01
-                8DE5AF152E7C5E55FD34D36A04FBD311BD8D4F42A3E948DA99373131313131B1
-                582C967F00886A3238B89929410000000049454E44AE426082}
+                043D494441546843ED985F485B571CC77393A84BABDB8CDA4CD7BE743350418B
+                858A633E94D2E18B2F7D98B43506D914FADA8158DA52A66FED9B2D7BB2504858
+                27C8104199E2E893168AA8B4885514469CFFAD8A60B44D4CD2EF37F7A4D8D69B
+                DC9BDC3B18DC0FFCB8E7FCEEB9E7FC7EE7FECEEF9C7B2D262626262626FF6724
+                71D54ABACFA52226AEAAD16288D4DBDBFB456D6DEDCF76BBFD0CEA5659AD1BD1
+                7038FC626060E0717D7D7D1075CDCE2443EAEAEA726280973183C118CF3A3B3B
+                3F17E3EA866D6D6DEDA618C3705657577FE198F2D0C9511B4239EBEBEB8F8A8A
+                8A3CACCCCDCD8D4E4F4F4F58ADD668FC6E8644A3516B5959D9B9D2D2D2EF59DF
+                DCDCF4171616B6A0F896753D702C2F2FFF212628363636761FBA539062C85719
+                0AFB38C53E45F7318E059D039292B416626E6EEE1B5C5E43D6211B190AFB782D
+                FAD44C5A0E20749821183E1105894E4C4C387777777F40996D8F6A7358A2A24F
+                CD64920A950694FAFBFB5D151515435959597D589057A053B520D341EF5C4E6C
+                555555BFD96CB6CA6CE0743A1FAFACACFC48BD7C5B5FD43A101D1919F96B7070
+                F0E1D0D0D083D1D1D1E7D029BD016B4747C7BD8D8D8D002B780B74C267A4136A
+                E0C0DC5C5C9013905C8892F3D47FD9D0D070616B6BEB5F9158626F01C2E92AEE
+                1DE544CEECEC6CBB68AA290B69818671700ACB4A7B08F57688D3E3F15C444E5F
+                1276C59DC09B386A4DA4ED80DA8D4C4248D4391C8EB3A29E92502864DBD9D971
+                E068E0C6067559A8A90FE3CD788B8B8B7B5065062274E096DBEDBECB0A9CEC2E
+                2929F909C57DD6F5201B33E9131394317022114E89304CFB0D28C5F1C758F1F6
+                1916BA0007A4A9A9A963281EB51E34A1FA2CD4D3D373252F2FEF3C2648D53391
+                4884EDA482828293D5D5D575B2D662090683073896B7363636FE8EEA16846164
+                780871A69885126797545202F9BAADADAD667F7F7F510E8C580C3B73C8E7F3DD
+                C03DF6930D49F09F67A154621F1E1E766301FF236C8A1BEFF7FB794CFED87862
+                B803128ED3757B7B7BB7288B8B8BDF5127DFFA04099BDE37307E4ED81343D828
+                CD7C02C31DF8200B2D2C2CDC814E695167C1D93F45D364617398B41D509B856C
+                87B390282B3D2BB5B4B4FC8A34F90A331FEEEBEBBBE9F57A6910176C28DE4247
+                D43A40DE870CBEA09265A203181D686A6AF27477775FC791E2097486184FB438
+                A0167E270471E89B696E6EE66EBB0931C478928903F13C2F173F814E3087F3F7
+                C801154988F791E2AD2AA2F6217E133FC2F9E51A2BDBDBDB7FE3F214C7FDC459
+                2623786EC2E5627E7EFE25D6B1913DC146D68CA26E1BD967939393EFB384D18C
+                8F8FDFE698F2D0FA60AFA9A971636666C4188611080426CBCBCB4F734C79E8E4
+                A80D21B63B5E595979BABDBDDDEB72B9BEC547B8AE0900B647969696665A5B5B
+                FDF3F3F3FC9ADBA33A7E33095A160E0DE6E6721C9203496BD12581C6F2D70A17
+                3EAFAA7E9A693582EDE988DEC627A0D17424E5CC9B9898989898582C16CB3B03
+                0932236D1C205A0000000049454E44AE426082}
               FileName = 
                 'C:\Users\TI\Desktop\Workspace\Projetos\Delphi\DeliveryControl\im' +
                 'ages\exit\res\mipmap-mdpi\ic_launcher.png'
@@ -186,6 +215,11 @@ object view_Main: Tview_Main
       Category = 'Menu'
       Text = 'actionBoletos'
       OnExecute = actionBoletosExecute
+    end
+    object actionEntregasDia: TAction
+      Category = 'Menu'
+      Text = 'Entregas Dia'
+      OnExecute = actionEntregasDiaExecute
     end
   end
 end
